psuhing up latest code changes

--- a/client/src/components/PlayerCard/style.css
+++ b/client/src/components/PlayerCard/style.css
@@ -1,4 +1,10 @@
 .card{
- max-width: 540px;
+ max-width: 740px;
  font-family: 'Holtwood One SC', serif;
+}
+.card-body{
+    background-color: red;
+}
+.row{
+    position: center;
 }
